fix: fix employer auth + talent search update
